# hoopitup

./: .gitignore  ABOUT.md  README.md  TODO.md  development.md
.github/: renovate.json
app/backend/: .env.example  app.py  config.py  pyproject.toml
app/backend/hoopitup/: app.py  config.py
app/frontend/: .gitignore  index.html  jest.config.cjs  package-lock.json  package.json  vite.config.js
app/frontend/public/: README.md  manifest.json  service-worker.js
app/frontend/src/: App.vue  main.js
app/frontend/src/__tests__/: expectedValue.test.cjs
app/frontend/src/utils/: expectedValue.cjs
docs/: _config.yml  index.md
docs/_includes/: head.html
hosting/: .env.example  Dockerfile  docker-compose.yml  entrypoint.sh  env.example  nginx.conf  uwsgi.ini
