[tool.poetry]
name = "hoopitup-backend"
version = "0.1.0"
description = "Backend API for Hoop It Up - A PWA for coordinating games"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.3"
flask-socketio = "^5.3.4"
flask-cors = "^4.0.0"
python-socketio = "^5.9.0"
python-engineio = "^4.7.1"
Werkzeug = "^2.3.7"
python-decouple = "^3.8"
APScheduler = "^3.10.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
