[tool.poetry]
name = "hoopitup"
version = "0.1.0"
description = "Backend API for Hoop It Up - A PWA for coordinating games"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.3"
flask-socketio = "^5.3.4"
flask-cors = "^4.0.0"
python-socketio = "^5.9.0"
python-engineio = "^4.7.1"
Werkzeug = "^2.3.7"
python-decouple = "^3.8"
APScheduler = "^3.10.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.lint.dependencies]
ni-python-styleguide = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
