[tool.poetry]
name = "hoopitup"
version = "0.1.0"
description = "Backend API for Hoop It Up - A PWA for coordinating games"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.1.3"
flask-socketio = "^5.3.4"
flask-cors = "^6.0.2"
python-socketio = "^5.9.0"
python-engineio = "^4.7.1"
Werkzeug = "^3.1.8"
python-decouple = "^3.8"
APScheduler = "^3.10.4"
flask-wtf = "^1.3.0"
gevent = {version="^26.5.0", platform="linux"}


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-cov = "^7.1.0"
pre-commit = "^4.6.0"


[tool.poetry.group.lint.dependencies]
ni-python-styleguide = "^0.5.0"
flake8-logging = "^1.8.0"


[tool.poetry.group.security.dependencies]
pip-audit = "^2.10.0"
bandit = "^1.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
